--- a/charts/perfana/templates/perfana-grafana-deployment.yaml
+++ b/charts/perfana/templates/perfana-grafana-deployment.yaml
@@ -64,19 +64,20 @@ spec:
           resources:
 {{ toYaml .Values.perfanaGrafana.resources | indent 12 }}
           volumeMounts:
-          - name: dot-env
-            mountPath: /env/perfana-mongo-urls.secret.env
-            subPath: perfana-mongo-urls
+          - name: perfana-grafana-secrets
+            mountPath: /secrets/perfana-mongo-urls-secret.env
+            subPath: perfana-mongo-urls-secret.env
+          - name: perfana-grafana-secrets
+            mountPath: /secrets/perfana-grafana-mysql-secret.env
+            subPath: perfana-grafana-mysql-secret.env
       volumes:
-      - name: dot-env
+      {{- if .Values.existingSecret }}
+      - name: perfana-grafana-secrets
         projected:
           sources:
           - secret:
-              {{- if .Values.dotenvExistingSecret }}
-              name: {{ .Values.dotenvExistingSecret }}
-              {{ else }}
-              name: secret-dotenv
-              {{- end }}
+              name: {{ .Values.existingSecret }}       
+      {{- end }}
 
     {{- with .Values.perfanaGrafana.nodeSelector }}
       nodeSelector:
