--- a/charts/perfana/templates/perfana-fe-deployment.yaml
+++ b/charts/perfana/templates/perfana-fe-deployment.yaml
@@ -107,6 +107,10 @@ spec:
           resources:
 {{ toYaml .Values.perfanaFe.resources | indent 12 }}
           volumeMounts:
+          {{- if .Values.perfanaFe.volumeMounts }}
+             {{- toYaml .Values.perfanaFe.volumeMounts | nindent 10 }}
+          {{- end }}
+          {{- if .Values.existingSecret }}
           - name: perfana-fe-secrets
             mountPath: /secrets/perfana-fe-grafana-config-secret.yaml
             subPath: perfana-fe-grafana-config-secret.yaml
@@ -131,10 +135,14 @@ spec:
           - name: perfana-fe-secrets
             mountPath: /secrets/perfana-mongo-urls-secret.env
             subPath: perfana-mongo-urls-secret.env
+          {{- end }}
           - name: perfana-fe-meteor-settings
             mountPath: /config/perfana-fe-meteor-settings.yaml
             subPath: perfana-fe-meteor-settings.yaml   
       volumes:
+      {{- if .Values.perfanaFe.volumes }}
+         {{- toYaml .Values.perfanaFe.volumes | nindent 6 }}
+      {{- end }}
       - name: perfana-fe-meteor-settings
         projected:
           sources:
